# hand-write

./: .gitignore  6.qrc  LICENSE  LICENSE.txt  README.md  img.py  main.py  night.py  night.qrc  pyproject.toml  requirements.txt  ui.py  ui.ui  untitled.ui  预设.txt
.github/workflows/: release.yml
hand_write/: __init__.py
tests/: conftest.py  test_setup_validation.py
